<resources>
    <string name="app_name">Notes</string>
    <string name="label_day_of_week">Day of week:</string>
    <string name="title_of_note">Title of note:</string>
    <string name="description_of_note">Description of note:</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="add_note">Add Note</string>
    <string name="warning_fill_fields">Fill all fields!</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
